make connection editor window modal instead of application modal.

BUG: 253317